--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -41,15 +41,15 @@
       <property name="alignment">
        <set>Qt::AlignCenter</set>
       </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
     <item>
-     <widget class="QTextEdit" name="passEdit">
-      <property name="maximumSize">
-       <size>
-        <width>16777215</width>
-        <height>40</height>
-       </size>
+     <widget class="QLineEdit" name="passEdit">
+      <property name="maxLength">
+       <number>128</number>
       </property>
       <property name="placeholderText">
        <string>Password</string>
@@ -57,12 +57,9 @@
      </widget>
     </item>
     <item>
-     <widget class="QTextEdit" name="saltEdit">
-      <property name="maximumSize">
-       <size>
-        <width>16777215</width>
-        <height>40</height>
-       </size>
+     <widget class="QLineEdit" name="saltEdit">
+      <property name="maxLength">
+       <number>128</number>
       </property>
       <property name="placeholderText">
        <string>Salt</string>
@@ -70,21 +67,12 @@
      </widget>
     </item>
     <item>
-     <widget class="QTextEdit" name="outFileName">
-      <property name="maximumSize">
-       <size>
-        <width>16777215</width>
-        <height>60</height>
-       </size>
-      </property>
-      <property name="baseSize">
-       <size>
-        <width>0</width>
-        <height>0</height>
-       </size>
+     <widget class="QLineEdit" name="outFileName">
+      <property name="maxLength">
+       <number>100</number>
       </property>
       <property name="placeholderText">
-       <string>Enter Output File Name Here</string>
+       <string>Output File Name</string>
       </property>
      </widget>
     </item>
